# kalem

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  structure.txt
examples/: basic_motion.cpp  physics_demo.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/api/: EasyAPI.cpp  EasyAPI.h
src/engine/: AnimationEngine.cpp  AnimationEngine.h  PhysicsEngine.cpp  PhysicsEngine.h  Scene.cpp  Scene.h  Timeline.cpp  Timeline.h
src/objects/: AnimationObject.cpp  AnimationObject.h  Particle.cpp  Particle.h  Shape.cpp  Shape.h  Text.cpp  Text.h
src/rendering/: Renderer.cpp  Renderer.h
src/utils/: Colors.cpp  Colors.h  Math.cpp  Math.h  Time.cpp  Time.h
